<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".UserSignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/innerRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_weight="0.7">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/kaya_logo"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="-10dp"
                    android:layout_gravity="center_horizontal"
                    android:text="G O O D   T O   S E E   Y O U"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="25dp"
                android:paddingStart="25dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewHide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="#00000000"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="1dp"
                    app:contentPadding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:drawableStart="@drawable/ic_username"
                                android:hint="@string/prompt_user"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textLayout1">

                            <AutoCompleteTextView
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:drawableStart="@drawable/ic_phone"
                                android:hint="@string/prompt_phone"
                                android:imeOptions="actionUnspecified"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textLayout2">

                            <AutoCompleteTextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="10dp"
                                android:drawableStart="@drawable/ic_email"
                                android:hint="@string/prompt_email"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp" />

                        </android.support.design.widget.TextInputLayout>

                        <ImageView
                            android:id="@+id/mail1"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_below="@+id/textLayout3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/gmail" />

                        <ImageView
                            android:id="@+id/mail2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_below="@+id/textLayout3"
                            android:layout_toStartOf="@+id/mail1"
                            android:src="@drawable/yahoo" />

                        <ImageView
                            android:id="@+id/mail3"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_below="@+id/textLayout3"
                            android:layout_toEndOf="@+id/mail1"
                            android:src="@drawable/outlook" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    android:clickable="true"
                    android:onClick="REGISTER_USER"
                    android:layout_gravity="center_horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="Sign In"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/skip_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    android:clickable="true"
                    android:onClick="SKIP"
                    android:layout_gravity="center_horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="Skip"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

